--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <section class="container">
     <div class="rules">
       <h3>How to play the Dice Game</h3>
       <ul>
@@ -37,6 +38,9 @@
         <li>The first player to reach 100 points on GLOBAL score wins the game</li>
       </ul>
     </div>
+  </section>
+
+
 
     <div class="wrapper clearfix">
       <div class="player-0-panel active">
