--- a/index.html
+++ b/index.html
@@ -19,28 +19,26 @@
 
   <body>
     <section class="container">
-    <div class="rules">
-      <h3>How to play the Dice Game</h3>
-      <ul>
-        <li>This game has 2 players, playing in rounds</li>
-        <li>
-          In each turn, a player rolls a dice as many times as he/she wishes. Each result get added
-          to that person's ROUND score
-        </li>
-        <li>
-          BUT, if the player rolls a 1, all his ROUND score gets lost. After that, it's the next
-          player's turn
-        </li>
-        <li>
-          The player can choose to 'Hold', which means that his ROUND score gets added to his GLBAL
-          score. After that, it's the next player's turn
-        </li>
-        <li>The first player to reach 100 points on GLOBAL score wins the game</li>
-      </ul>
-    </div>
-  </section>
-
-
+      <div class="rules">
+        <h3>How to play the Dice Game</h3>
+        <ul>
+          <li>This game has 2 players, playing in rounds.</li>
+          <li>
+            In each turn, a player rolls a dice as many times as he/she wishes. Each result get
+            added to that person's ROUND score
+          </li>
+          <li>
+            BUT, if the player rolls a 1, all his ROUND score gets lost. After that, it's the next
+            player's turn
+          </li>
+          <li>
+            The player can choose to 'Hold', which means that his ROUND score gets added to his
+            GLBAL score. After that, it's the next player's turn
+          </li>
+          <li>The first player to reach 100 points on GLOBAL score wins the game</li>
+        </ul>
+      </div>
+    </section>
 
     <div class="wrapper clearfix">
       <div class="player-0-panel active">
